// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> Snaphot must match blue ~ large 1`] = `
<span
  className="label labelBlue labelLarge"
>
  Awesome label
</span>
`;

exports[`<Label /> Snaphot must match blue ~ medium 1`] = `
<span
  className="label labelBlue labelMedium"
>
  Awesome label
</span>
`;

exports[`<Label /> Snaphot must match blue ~ small 1`] = `
<span
  className="label labelBlue labelTiny"
>
  Awesome label
</span>
`;

exports[`<Label /> Snaphot must match blue ~ tiny 1`] = `
<span
  className="label labelBlue labelTiny"
>
  Awesome label
</span>
`;
